--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "dependencies": {
         "check-update-github": "^0.0.4",
         "colors": "^1.4.0",
-        "epicgames-client": "Revadike/node-epicgames-client#develop",
+        "epicgames-client": "dhun-nuniden/node-epicgames-client",
         "epicgames-client-login-adapter": "^0.1.0",
         "node-2fa": "^1.1.2",
         "tracer": "^1.0.3"
